# AdeIpsumGRPCweb

./: .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  package.json  webpack.config.js
proto/v1/: adeipsum.proto
scripts/: webpack.config.js  webpack.server.js
src/: api.rs  index.html  index.js
src/client/: index.jsx
src/client/components/: content.jsx
src/client/error/: boundary.jsx  index.js
src/client/hooks/: use-content.js
src/styles/: _variables.scss  buttons.scss  index.scss
