[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
tonic = { version = "0.8", features = ["tls"] }
tokio = { version = "1.0", features = [ "rt-multi-thread"] }
bytes = "1"
tonic-web = "0.4.0"
prost = "0.11"
rand = "0.8.5"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
